src/index.css
body {
  margin: 0;
  font-family: "Comic Sans MS", "Comic Sans", "Comic Mono", "Chalkboard",
    "Marker Felt", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

button {
  /* Sizing and padding */
  display: inline-block;
  font-size: 1rem;
  padding: 0.5rem 1rem;
  margin: 0 0.5rem 0.5rem 0;

  /* Sketchy hand drawn styling */
  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
  font-style: italic;
  font-family: "Comic Sans MS", "Comic Sans", "Comic Mono", "Chalkboard",
    "Marker Felt", sans-serif;

  /* Styling (ripped from some default button css thing) */
  border: 2px solid #000000;
  box-sizing: border-box;
  text-decoration: none;
  font-weight: bold;
  color: #000000;
  text-align: center;
  transition: all 0.2s;
  cursor: pointer;
  background-color: transparent;
}

button:disabled {
  color: gray;
  border-color: gray;
}

.gamescreen {
  position: relative;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  height: 100vh;
  overflow-y: hidden;
  overflow-x: hidden;
  align-content: flex-start;
}

@media (max-width: 800px) {
  .gamescreen {
    flex-wrap: nowrap;
    overflow-y: scroll;
    padding-bottom: 5rem;
    height: -webkit-fill-available;
  }
}

.panel {
  background-color: darkgray;
  border-radius: 8px;
  max-width: 300px;
  margin: 20px;
  border: 2px solid black;
}
.my-panel {
  background-color: lightgray;
}

/* Override to enable scrolling when touching chart on mobile */
.VictoryContainer {
  touch-action: auto !important;
}

